--- a/client/src/App.css
+++ b/client/src/App.css
@@ -48,3 +48,8 @@
     width: 400px;
     margin: auto;
 }
+
+.ui.teal.button:focus,
+.ui.teal.buttons .button:focus {
+    background-color: #00b5ad;
+}
